--- a/ProjetoPU/src/main/webapp/pages/menu.xhtml
+++ b/ProjetoPU/src/main/webapp/pages/menu.xhtml
@@ -12,7 +12,7 @@
 				<p:menuitem value="Catetorias" url="categorias.xhtml" />
 				<p:menuitem value="Produtos" url="produtos.xhtml" />
 			</p:submenu>
-			<p:submenu label="Relatorios"></p:submenu>
+			<p:submenu label="Relatorios"/>
 			<p:submenu label="Ajuda">
 				<p:menuitem value="Sair" />
 			</p:submenu>
