classes,domain,dao,bean

--- a/ProjetoPU/src/main/webapp/pages/menu.xhtml
+++ b/ProjetoPU/src/main/webapp/pages/menu.xhtml
@@ -4,10 +4,11 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-	<h:form>
-	
+	<h:form>	
 		<p:menubar>
-			<p:submenu label="Arquivo"></p:submenu>
+			<p:submenu label="Home">
+				<p:menuitem value="" url="home.xhtml" />
+			</p:submenu>
 			<p:submenu label="Cadastros">
 				<p:menuitem value="Catetorias" url="categorias.xhtml" />
 				<p:menuitem value="Produtos" url="produtos.xhtml" />
