criação do front-end

--- a/ProjetoPU/src/main/webapp/pages/produtos.xhtml
+++ b/ProjetoPU/src/main/webapp/pages/produtos.xhtml
@@ -126,7 +126,7 @@
 						value="#{cursor.fabricante.descricacao}" /></div>
 				</p:column>
 				<p:column headerText="Editar" width="50">
-					<p:commandButton icon="pi-sync" style="width: 40px" heigth="30px"
+					<p:commandButton icon="ui-icon-pencil" style="width: 40px" heigth="30px"
 						actionListener="#{produtoBean.selecionar(cursor)}" process="@this"
 						update="@form:painelDados" />
 				</p:column>
