--- a/ProjetoPU/src/main/webapp/pages/fabricanteCadastro.xhtml
+++ b/ProjetoPU/src/main/webapp/pages/fabricanteCadastro.xhtml
@@ -25,7 +25,7 @@
 			
 			<h:panelGrid columns="3">
 				<p:commandButton value="Novo" />
-				<p:commandButton value="Salvar" />
+				<p:commandButton value="Salvar" actionListener="#{fabricanteBean.salvar()}"/>
 				<p:commandButton value="Voltar" action="/pages/fabricantePesquisa.xhtml?faces-redirect=true" />
 			</h:panelGrid>
 		</h:form>
