--- a/ProjetoPU/src/main/webapp/pages/fabricantePesquisa.xhtml
+++ b/ProjetoPU/src/main/webapp/pages/fabricantePesquisa.xhtml
@@ -7,8 +7,13 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="/templates/modeloGeral.xhtml">
+	<ui:define name="metadata">
+		<f:metadata>
+			<f:event listener="#{fabricanteBean.carregar()}" type="preRenderView" />
+		</f:metadata>
+	</ui:define>
 	<ui:define name="conteudo">
-		<f:event listener="#{fabricanteBean.carregar()}" type="preRenderView" />
+
 		<h:form>
 			<p:toolbar>
 				<f:facet name="left">
@@ -16,23 +21,26 @@
 				</f:facet>
 			</p:toolbar>
 
-			<h:panelGrid columns="6">
-				<p:outputLabel value="Descrição:" />
-				<p:inputText maxlength="50" size="30" />
-				<p:commandButton value="Buscar" />
-				<p:commandButton value="Novo"
+			<h:panelGrid>
+				<p:outputLabel />
+				<p:commandButton value="Novo " icon="ui-icon-circle-plus"
 					action="/pages/fabricanteCadastro.xhtml?faces-redirect=true" />
 			</h:panelGrid>
 
 			<p:dataTable emptyMessage="Nenhum registro encontrado!"
 				value="#{fabricanteBean.listafabricantes}"
 				filteredValue="#{fabricanteBean.listaFabricantesFiltrado}"
-				var="fabricanteCursor">
-				<p:column headerText="ID" filterBy="#{fabricanteCursor.id}" sortBy="#{fabricanteCursor.id}" width="5%" style="font-size:15px">
-					<h:outputText value="#{fabricanteCursor.id}" style="text-align:center"/>
+				paginator="true" rows="22" var="fabricanteCursor">
+				<p:column headerText="ID" filterBy="#{fabricanteCursor.id}"
+					sortBy="#{fabricanteCursor.id}" width="3%"
+					style="font-size:14px; text-align:center">
+					<h:outputText value="#{fabricanteCursor.id}" />
 				</p:column>
-				<p:column headerText="Descrição" filterBy="#{fabricanteCursor.descricao}" sortBy="#{fabricanteCursor.descricao}" style="font-size:15px">
-					<h:outputText value="#{fabricanteCursor.descricao}" />
+				<p:column headerText="Descrição"
+					filterBy="#{fabricanteCursor.descricao.toUpperCase()}"
+					sortBy="#{fabricanteCursor.descricao.toUpperCase()}"
+					style="font-size:14px">
+					<h:outputText value="#{fabricanteCursor.descricao.toUpperCase()}" />
 				</p:column>
 				<p:column headerText="Opções" width="10%" style="font-size:15px">
 				</p:column>
